<resources>
    <string name="app_name">Task2</string>
    <string name="title_profile_fragment">Profile fragment</string>
    <string name="title_main_fragment">Main Fragment</string>
    <string name="title_settings_fragment">Settings Fragment</string>
    <string name="title_info_fragment">Info Fragment</string>
    <string name="title_null_fragment">Null Fragment</string>
    <string name="input_hint">Введите текст</string>
    <string name="give_button">Передать текст</string>
    <string name="go_back_button">Вернуться</string>
</resources>