<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_main_fragment"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_settings_fragment"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_profile_fragment"/>

    <item
        android:id="@+id/infoFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_info_fragment"/>

    <item
        android:id="@+id/nullFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_null_fragment"/>

</menu>